# WebClient

./: .gitignore  .gitignore.txt  CMakeLists.txt
src/: file_transfer.cpp  http_header.cpp  http_header.h  json_parser.cpp  json_parser.h  main.cpp  sys_info.cpp  sys_info.h  vendor.cpp  web_packet.cpp  web_packet.h  web_server.cpp  web_server.h
wwwroot/: 404.html  app.js  dynamic_page.html  index.css  index.html
